Spliting things. Still a WIP